--- a/Revshop_testing/src/main/resources/application.properties
+++ b/Revshop_testing/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=Revshop_testing
+# -----------------------------
+# DATABASE CONFIGURATION
+# -----------------------------
+spring.datasource.url=jdbc:mysql://localhost:3306/revshop_testing
+spring.datasource.username=root
+spring.datasource.password=Mohan@1432
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# -----------------------------
+# JPA / HIBERNATE CONFIG
+# -----------------------------
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# -----------------------------
+# SERVER CONFIG (Optional)
+# -----------------------------
+server.port=8081
