Updated controller mappings

--- a/Revshop_testing/src/main/resources/application.properties
+++ b/Revshop_testing/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Revshop_testing
 # -----------------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/revshop_testing
 spring.datasource.username=root
-spring.datasource.password=Mohan@1432
+spring.datasource.password=Reethika@16@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # -----------------------------
