--- a/Revshop_testing/src/main/resources/application.properties
+++ b/Revshop_testing/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Revshop_testing
 # -----------------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/revshop_testing
 spring.datasource.username=root
-spring.datasource.password=Reethika@16@
+spring.datasource.password=root
 #=======
 #spring.datasource.password=root
 #>>>>>>> feature-lokesh
